--- a/index.html
+++ b/index.html
@@ -3,10 +3,101 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title></title>
+        <title>React Documentation</title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
+        <nav id="navbar">
+            <header>
+                <h1>React Documentation</h1>
+            </header>
+            <a href="#Hello_World" class="nav-link">Hello World</a>
+            <a href="#Introducing_JSX" class="nav-link">Introducing JSX</a>
+            <a href="#Rendering_Elements" class="nav-link">Rendering Elements</a>
+            <a href="#Components_and_Props" class="nav-link">Components and Props</a>
+            <a href="#State_and_Lifecycle" class="nav-link">State and Lifecycle</a>
+            <a href="#Handling_Events" class="nav-link">Handling Events</a>
+            <a href="#Conditional_Rendering" class="nav-link">Conditional Rendering</a>
+            <a href="#Lists_and_Keys" class="nav-link">Lists and Keys</a>
+            <a href="#Forms" class="nav-link">Forms</a>
+            <a href="#Lifting_State_Up" class="nav-link">Lifting State Up</a>
+            <a href="#Composition_vs_Inheritance" class="nav-link">Composition vs Inheritance</a>
+            <a href="#Thinking_In_React" class="nav-link">Thinking In React</a>
+        </nav>
+        <main id="main-doc">
+            <section id="Hello_World" class="main-section">
+                <header>
+                    <h2>Hello World</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="Introducing_JSX" class="main-section">
+                <header>
+                    <h2>Introducing JSX</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="Rendering_Elements" class="main-section">
+                <header>
+                    <h2>Rendering Elements</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="Components_and_Props" class="main-section">
+                <header>
+                    <h2>Components and Props</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="State_and_Lifecycle" class="main-section">
+                <header>
+                    <h2>State and Lifecycle</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="Handling_Events" class="main-section">
+                <header>
+                    <h2>Handling Events</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="Conditional_Rendering" class="main-section">
+                <header>
+                    <h2>Conditional Rendering</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="Lists_and_Keys" class="main-section">
+                <header>
+                    <h2>Lists and Keys</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="Forms" class="main-section">
+                <header>
+                    <h2>Forms</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="Lifting_State_Up" class="main-section">
+                <header>
+                    <h2>Lifting State Up</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="Composition_vs_Inheritance" class="main-section">
+                <header>
+                    <h2>Composition vs Inheritance</h2>
+                </header>
+                <code></code>
+            </section>
+            <section id="Thinking_In_React" class="main-section">
+                <header>
+                    <h2>Thinking In React</h2>
+                </header>
+                <code></code>
+            </section>
+        </main>
         <script src="js/app.js"></script>
     </body>
 </html>
