--- a/index.html
+++ b/index.html
@@ -29,7 +29,50 @@
                 <header>
                     <h2>Hello World</h2>
                 </header>
-                <code></code>
+                <p>
+                    The easiest way to get started with React is to use <a href="https://reactjs.org/redirect-to-codepen
+                    /hello-world">this Hello World example code on CodePen.</a> You don’t need to install anything;
+                    you can just open it in another tab and follow along as we go through examples. If you’d rather use
+                    a local development environment, check out the <a href="https://reactjs.org/docs/try-react.html">
+                    Installation</a> section.
+                </p>
+                <p>
+                    The Smallest React example looks like this:
+                </p>
+                <code>
+                    ReactDOM.render(
+                        &lth1&gtHello, world!&lt/h1&gt,
+                        document.getElementById('root')
+                    );
+                </code>
+                <p>
+                    It renders a heading saying "Hello, world!" on the page.
+                </p>
+                <p>
+                    The next few sections will gradually introduce you to using React. We will examine the building
+                    blocks of React apps: elements and components. Once you master them, you can create complex apps
+                    from small reusable pieces.
+                </p>
+                <h3>A Note on JavaScript</h3>
+                <p>
+                        React is a JavaScript library, and so we’ll assume you have a basic understanding of the
+                        JavaScript language. If you don’t feel very confident, we recommend <a href="https://
+                        developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript">refreshing
+                        your JavaScript knowledge</a> so you can follow along more easily.
+                </p>
+                <p>
+                        We also use some of the ES6 syntax in the examples. We try to use it sparingly because it’s
+                        still relatively new, but we encourage you to get familiar with <a href="https://developer.
+                        mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions">arrow functions</a>,
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes">classes</a>
+                        , <a href="https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Template_literals">
+                        template literals</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/
+                        Reference/Statements/let">let</a>, and <a href="https://developer.mozilla.org/en-US/docs/Web/
+                        JavaScript/Reference/Statements/const">const</a> statements. You can use the <a href="https://
+                        babeljs.io/repl/#?presets=react&code_lz=MYewdgzgLgBApgGzgWzmWBeGAeAFgRgD4AJRBEAGhgHcQAnBAEwEJsB
+                        6AwgbgChRJY_KAEMAlmDh0YWRiGABXVOgB0AczhQAokiVQAQgE8AkowAUAcjogQUcwEpeAJTjDgUACIB5ALLK6aRklTRBQ0
+                        KCohMQk6Bx4gA">Babel REPL</a> to check what ES6 code compiles to.
+                </p>
             </section>
             <section id="Introducing_JSX" class="main-section">
                 <header>
